hphp/hack/test/typecheck/trait_abs_const.php
<?hh // partial

trait T {
  abstract const X;
}
